# sharptypescript

./: .gitignore  .lintstagedrc  .prettierrc.json  .pylintrc  Doxyfile  HOWTO.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  salt2type
.github/: renovate.json
.github/workflows/: auto-add-pr.yml  build-and-test.yml
.husky/: pre-commit
src/: __init__.py  helper.py  methods.py  types.py  util.py
test/: test_methods.py  test_salt2type.py  test_util.py
tpl/: .eslintrc.json  .prettierignore  .prettierrc.json  jest.config.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
tpl/src/: index.ts  ss.ts  types.ts
tpl/src/ss/: Dictionary.ts  Enum.ts  ObjectEnumerator.ts  Stopwatch.ts  StringBuilder.ts  TimeSpan.ts  collections.ts  dates.ts  delegates.ts  exceptions.ts  index.ts  numbers.ts  strings.ts
tpl/src/ss/__tests__/: Enum.ts  Stopwatch.ts  StringBuilder.ts  TimeSpan.ts  collections.ts  dates.ts  delegates.ts  index.ts
