[tool.poetry]
name = "salt2type"
version = "0.2.0"
description = "Saltarelle to TypeScript Migration Tool"
authors = ["Pangaea Information Technologies, Ltd."]
readme = "README.md"
repository = "https://github.com/pangaeatech/salt2type"

[tool.black]
line-length = 150
target-version = ['py38']
include = 'salt2type|\.pyi?$'

[tool.poetry.dependencies]
python = "~3.12"
black = "24.10.0"
pylint = "3.2.6"
typing-extensions = "4.12.2"
tomli = "2.0.1"
dill = "0.3.8"
