[tool.poetry]
name = "salt2type"
version = "0.2.0"
description = "Saltarelle to TypeScript Migration Tool"
authors = ["Pangaea Information Technologies, Ltd."]
readme = "README.md"
repository = "https://github.com/pangaeatech/salt2type"
package-mode = false

[tool.black]
line-length = 150
target-version = ['py38']
include = 'salt2type|\.pyi?$'

[tool.poetry.dependencies]
black = "24.10.0"
coverage = "7.6.7"
dill = "0.3.9"
pdoc = "15.0.1"
pylint = "3.3.3"
python = "~3.12"
tomli = "2.2.1"
typing-extensions = "4.12.2"
